Fix & Rewrite - hidden input for active tabs (dev can save it if needed) - wrap radio tab hidden input in "li" (previously invalid html). - input field args rewrite (probably rewrite all fields later).

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,9 @@
 			background: linear-gradient( 90deg, #fafafa 0%, #fafafa 48px, #fff 48px, #fff 100% );
 		}
 	}
+.fx-mb-hideme{
+	display: none !important;
+}
 
 
 /* Nav
